Kubernetes/apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  ports:
    - name: http
      port: 5055
      targetPort: http
  selector:
    app: seerr
