Kubernetes/apps/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`add.nerine.dev`)
      services:
        - name: seerr
          port: 5055
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
